--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
-  "keywords": ["cli", "ai", "assistant", "openai"],
+  "keywords": [
+    "cli",
+    "ai",
+    "assistant",
+    "openai"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "inquirer": "^9.2.12",
     "boxen": "^7.1.1",
-    "openai": "^4.28.4",
-    "dotenv": "^16.3.1"
+    "chalk": "^5.3.0",
+    "dotenv": "^16.3.1",
+    "inquirer": "^9.2.12",
+    "openai": "^4.28.4"
+  },
+  "devDependencies": {
+    "vitest": "^3.2.4"
   }
 }
